I noticed that the gradient text in the poem doesn't show up on iOS Safari. I think inline-flex was the issue so I changed it to inline-block. Hopefully that will resolve the issue.

--- a/css/main.css
+++ b/css/main.css
@@ -3377,7 +3377,7 @@ background: #3f3e44 !important;
 
 @media (max-width: 768px) {
   .txt-accent-mobile-fix{
-    display: inline-flex;
+    display: inline-block;
   }
 }
 
